--- a/src/App.css
+++ b/src/App.css
@@ -11,15 +11,17 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-size: 48px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .gameImage {
   width: 100px;
-  height: 200px;
+  height: 100px;
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
-  
+  margin-left: 20px;
 }
 
 .mainContainer {
@@ -29,38 +31,111 @@
   width: 100vw
 }
 
-.gamesList {
+.gamesListContainer {
   height: 90vh;
   width: 70%;
   overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-.gameTile {
+.tile {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
+  border: solid rgb(78, 78, 78) 2px;
+  box-shadow: 0 0 10px grey;
+}
 
+.gameTile {
+  height: 150px;
+  width: 80%;
+  margin: 20px;
+  margin-left: 90px;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  border-radius: 5px;
+ 
+}
+
+.shelf {
+  width: 550px;
+  height: 33%;
+  margin: 10px;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+}
+
+.gamesInShelf {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  flex-wrap: wrap;
+}
+
+.shelfGameTile {
+  margin: 10px;
+  width: 350px;
+  height: 100px;
 }
 
 .button {
-  border: none;
-  background: #404040;
-  color: #ffffff !important;
-  font-weight: 100;
-  padding: 8px;
-  text-transform: uppercase;
-  border-radius: 6px;
-  display: inline-block;
-  transition: all 0.3s ease 0s;
-  font-size: x-small;
+  display:inline-block;
+  padding:0.35em 1.2em;
+  border:0.1em solid black;
+  margin:0 0.3em 0.3em 0;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+  color: black;
+  text-align:center;
+  transition: all 0.2s;
+  background-color: #FFFFFF;
 }
 
-.button:hover {
-  color: #404040 !important;
-  font-weight: 700 !important;
-  letter-spacing: 3px;
-  background: none;
-  -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-  -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-  transition: all 0.3s ease 0s;
-  }
+.button:hover{
+  color:#FFFFFF;
+  background-color:#000000;
+  border:0.1em solid #FFFFFF;
+}
+
+.searchButton {
+  color: #fff !important;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #60a3bc;
+  padding: 3px;
+  border-radius: 50px;
+  display: inline-block;
+  border: none;
+  transition: all 0.4s ease 0s;
+  margin-left: 5px;
+  outline: none;
+}
+
+.searchButton:hover {
+  text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
+  box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  transition: all 0.4s ease 0s;
+}
+
+h2 {
+  font-size: 24px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 5px 15px 15px 15px;
+}
+
+.searchBarContainer{
+height: 5vh;
+width: 80%;
+display: flex;
+justify-content: flex-end;
+}
+
