--- a/src/App.css
+++ b/src/App.css
@@ -17,11 +17,12 @@
 
 .gameImage {
   width: 100px;
-  height: 100px;
+  height: 70px;
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
   margin-left: 20px;
+  margin-right: 5px;
 }
 
 .mainContainer {
@@ -33,7 +34,7 @@
 
 .gamesListContainer {
   height: 90vh;
-  width: 70%;
+  width: 74%;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
@@ -41,21 +42,26 @@
   align-items: center;
 }
 
+.gamesList {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .tile {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   border: solid rgb(78, 78, 78) 2px;
   box-shadow: 0 0 10px grey;
 }
 
 .gameTile {
-  height: 150px;
-  width: 80%;
-  margin: 20px;
-  margin-left: 90px;
-  font-size: 30px;
+  height: 75px;
+  width: 40%;
+  margin: 10px;
+  margin-left: 60px;
+  font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;
   color: black;
   border-radius: 5px;
@@ -86,9 +92,9 @@
 
 .button {
   display:inline-block;
-  padding:0.35em 1.2em;
+  padding:0.02em .3em;
   border:0.1em solid black;
-  margin:0 0.3em 0.3em 0;
+  margin:0 0.1em 0.1em 0;
   border-radius:0.12em;
   box-sizing: border-box;
   text-decoration:none;
@@ -106,6 +112,13 @@
   border:0.1em solid #FFFFFF;
 }
 
+
+h2 {
+  font-size: 24px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 5px 15px 15px 15px;
+}
+
 .searchButton {
   color: #fff !important;
   text-transform: uppercase;
@@ -120,22 +133,15 @@
   outline: none;
 }
 
+.searchBarContainer{
+  height: 5vh;
+  width: 80%;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .searchButton:hover {
   text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
   box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
   transition: all 0.4s ease 0s;
 }
-
-h2 {
-  font-size: 24px;
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 5px 15px 15px 15px;
-}
-
-.searchBarContainer{
-height: 5vh;
-width: 80%;
-display: flex;
-justify-content: flex-end;
-}
-
