--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  position:relative;
+  
 }
 
 .App-header {
@@ -13,6 +19,14 @@
   color: white;
   font-size: 48px;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.footer {
+  height: 5vh;
+  width: 100vw;
+  background-color: #282c34;
+  /* margin-top: -47px; */
+  z-index: 500;
 }
 
 .gameImage {
@@ -33,13 +47,14 @@
 }
 
 .gamesListContainer {
-  height: 90vh;
+  height: 85vh;
   width: 74%;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  z-index: 0;
 }
 
 .gamesList {
@@ -70,7 +85,7 @@
 
 .shelf {
   width: 550px;
-  height: 33%;
+  height: 30.3%;
   margin: 10px;
   overflow-y: scroll;
   display: flex;
@@ -88,6 +103,7 @@
   margin: 10px;
   width: 350px;
   height: 100px;
+  border-radius: 5px;
 }
 
 .button {
